@@ -1,3 +1,8 @@
+2004-04-14  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkiconsource.xml Add gtk.icon_size_lookup_for_settings()
+	function.
+
 2004-04-13  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkexpander.xml Add.
